@@ -4,10 +4,9 @@ namespace QuestPDF.Drawing.Proxy;
 
 internal class OverflowDebuggingProxy : ElementProxy
 {
-    public Size? OriginalMeasurementSize { get; private set; }
-    public Size? MeasurementSize { get; private set; }
+    public bool IsMeasuring { get; private set; } = true;
     
-    public SpacePlan? OriginalSpacePlan { get; private set; }
+    public Size? MeasurementSize { get; private set; }
     public SpacePlan? SpacePlan { get; private set; }
 
     public OverflowDebuggingProxy(Element child)
@@ -19,15 +18,17 @@ internal class OverflowDebuggingProxy : ElementProxy
     {
         var spacePlan = Child.Measure(availableSpace);
 
-        MeasurementSize = availableSpace;
-        SpacePlan = spacePlan;
+        if (IsMeasuring)
+        {
+            MeasurementSize = availableSpace;
+            SpacePlan = spacePlan;
+        }
         
         return spacePlan;
     }
-
-    internal void CaptureOriginalValues()
+    
+    public void StopMeasuring()
     {
-        OriginalMeasurementSize = MeasurementSize;
-        OriginalSpacePlan = SpacePlan;
+        IsMeasuring = false;
     }
 }
